--- a/templates/index.html
+++ b/templates/index.html
@@ -3,26 +3,10 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
   <script type="text/javascript" src="brython.js"></script>
   <script type="text/javascript" src="brython_stdlib.js"></script>
 
   <title>Take Me to Europe</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-  <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
 
 </head>
 
@@ -36,32 +20,32 @@
               document["result"].html = response.text
           else:
               warnings.warn(response.text)
-      def get_prediction(ev):
+      def get_user_score(ev):
           """Get the predicted probability."""
           req = ajax.ajax()
           req.bind('complete', show_results)
-          req.open('POST', '/predict', True)
-          req.set_header('content-type','application/json')
+          req.open('POST', '/user_score', True)
+          req.set_header('content-type','application/json')          
           user_inputs = {
-              'user_input_forest': document['user_input_forest'].value,
-              'user_input_castle': document['user_input_castle'].value,
-              'user_input_water': document['user_input_water'].value,
-              'user_input_historical': document['user_input_historical'].value,
-              'user_input_urban': document['user_input_urban'].value
+              'user_input_forest': document['user_input_forest'].value),
+              'user_input_castle': document['user_input_castle'].value),
+              'user_input_water': document['user_input_water'].value),
+              'user_input_historical': document['user_input_historical'].value),
+              'user_input_urban': document['user_input_urban'].value)
             }
-          print(user_inputs)
           data = json.dumps(user_inputs)
-          print(data)
           req.send(data)
-      document["predict_button"].bind("click", get_prediction)
+      document["initial_score_button"].bind("click", get_user_score)
     </script>
+    
+    
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <h2 class="navbar-brand">European Travel Recommendation</h2>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -69,136 +53,54 @@
           <div class="site-heading">
             <h1>Rate importance on a scale of 0 to 10</h1>
             <div>Forest/Mountain</div>
-            <textarea id="user_input_forest">
-            </textarea>
+            <textarea id="user_input_forest"></textarea>
             <div>Palaces/Castles</div>
-            <textarea id="user_input_castle">
-            </textarea>
+            <textarea id="user_input_castle"></textarea>
             <div>Coastal/Water</div>
             <textarea id="user_input_water"></textarea>
             <div>Historical</div>
-            <textarea id="user_input_historical">
-            </textarea>
+            <textarea id="user_input_historical"></textarea>
             <div>Urban</div>
-            <textarea id="user_input_urban">
-            </textarea>
-            <button id="predict_button">Predict!</button>
-              <div id="result">Results Appear Here</div>
+            <textarea id="user_input_urban"></textarea>
+            <button id="initial_score_button">Next</button>
           </div>
         </div>
       </div>
     </div>
   </header>
-<!--   <div id="result"></div> -->
-
-  <!-- Main Content -->
-<!--   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Man must explore, and this is exploration at its greatest
-            </h2>
-            <h3 class="post-subtitle">
-              Problems look mighty small from 150 miles up
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-            </h2>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 18, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Science has not yet mastered prophecy
-            </h2>
-            <h3 class="post-subtitle">
-              We predict too much for the next year and yet far too little for the next ten.
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on August 24, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Failure is not an option
-            </h2>
-            <h3 class="post-subtitle">
-              Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on July 8, 2019</p>
-        </div>
-        <hr>
-        <!-- Pager --> 
-<!--         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <hr>
-
-  <!-- Footer -->
-<!--   <footer>
+        
+  <header class="masthead2">
+    <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
+          <div class="site-heading">
+            <h1>If you have been and liked type 1, if you have been and disliked type -1, if you have not been type 0</h1>
+            <div>place 1</div>
+            <textarea id="place_1_rating"></textarea>
+            <div>place 2</div>
+            <textarea id="place_2_rating"></textarea>
+            <div>place 3</div>
+            <textarea id="place_3_rating"></textarea>
+            <div>place 4</div>
+            <textarea id="place_4_rating"></textarea>
+            <div>place 5</div>
+            <textarea id="place_5_rating"></textarea>
+            <div>place 6</div>
+            <textarea id="place_6_rating"></textarea>
+            <div>place 7</div>
+            <textarea id="place_7_rating"></textarea>
+            <div>place 8</div>
+            <textarea id="place_8_rating"></textarea>
+            <div>place 9</div>
+            <textarea id="place_9_rating"></textarea>
+            <div>place 10</div>
+            <textarea id="place_10_rating"></textarea>
+            <button id="city_rating_button">Find Top 5 Destinations</button>
+          </div>
         </div>
       </div>
     </div>
-  </footer> -->
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+  </header>
+        
 </html>
