--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <title>Travel Recommendation</title>
     <script type="text/javascript" src="brython.js"></script>
     <script type="text/javascript" src="brython_stdlib.js"></script>
-    <link rel="icon" href="data:;base64,=">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   </head>
   <body onload="brython(1)">
     <script type="text/python3">
@@ -45,12 +45,10 @@
     <textarea id="user_input_historical"></textarea>
     <div>Urban</div>
     <textarea id="user_input_urban"></textarea>
-    <button id="initial_score_button">Next</button>
+    <button id="predict_button">Next</button>
     <div id="result"></div>
-
-
-        
-    <h2>If you have been and liked type 1, if you have been and disliked type -1, if you have not been type 0</h1>
+       
+<!--     <h2>If you have been and liked type 1, if you have been and disliked type -1, if you have not been type 0</h1>
     <div>place 1</div>
     <textarea id="place_1_rating"></textarea>
     <div>place 2</div>
@@ -71,7 +69,7 @@
     <textarea id="place_9_rating"></textarea>
     <div>place 10</div>
     <textarea id="place_10_rating"></textarea>
-    <button id="city_rating_button">Find Top 5 Destinations</button>
+    <button id="city_rating_button">Find Top 5 Destinations</button> -->
       
   </body>
 </html>
