--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
       from browser import document, ajax
       import json
       import warnings
+      list_of_cities = ["this", "is", "a", "t", "f", "s", "seven", "e", "n", "t"]
+
       def show_results(response):
           if response.status==200 or response.status==0:
               document["result"].html = response.text
@@ -19,7 +21,7 @@
           """Get the predicted probability."""
           req = ajax.ajax()
           req.bind('complete', show_results)
-          req.open('POST', '/predict', False)
+          req.open('POST', '/scores', False)
           req.set_header('content-type','application/json')
           user_inputs = {
               'user_input_forest': document['user_input_forest'].value,
@@ -31,10 +33,26 @@
           data = json.dumps(user_inputs)
           req.send(data)
           return user_inputs
+      
       def showtext(ev):
-         display = document["place_1_rating"].style.display
-         document["place_1_rating"].style.display = "inline"
-      document["predict_button"].bind("click", showtext)
+         display = document["random_recs"].style.display
+         document["random_recs"].style.display = "inline"
+      
+
+      def change_place_names(ev, list_of_cities=list_of_cities):
+          document["place_1"].textContent = list_of_cities[0]
+          document["place_2"].textContent = list_of_cities[1]
+          document["place_3"].textContent = list_of_cities[2]
+          document["place_4"].textContent = list_of_cities[3]
+          document["place_5"].textContent = list_of_cities[4]
+          document["place_6"].textContent = list_of_cities[5]
+          document["place_7"].textContent = list_of_cities[6]
+          document["place_8"].textContent = list_of_cities[7]
+          document["place_9"].textContent = list_of_cities[8]
+          document["place_10"].textContent = list_of_cities[9]
+      
+      
+      document["score_button"].bind("click", change_place_names, showtext, get_prediction)
     </script>
     <h1>Rate importance on a scale of 0 to 10</h1>  
     <div>Forest/Mountain</div>
@@ -47,33 +65,35 @@
     <textarea id="user_input_historical"></textarea>
     <div>Urban</div>
     <textarea id="user_input_urban"></textarea>
-    <button id="predict_button">Predict!</button>
+    <button id="score_button">Submit</button>
+    <button id="rate_more_button">Rate More</button>
     <div id="result"></div>
       
     
     
-       
-<!--     <h2>If you have been and liked type 1, if you have been and disliked type -1, if you have not been type 0</h1> -->
-<!--     <div id=place_1>place 1</div> -->
-    <textarea id="place_1_rating" style="display:none"></textarea>
-<!--     <div>place 2</div>
-    <textarea id="place_2_rating"></textarea>
-    <div>place 3</div>
-    <textarea id="place_3_rating"></textarea>
-    <div>place 4</div>
-    <textarea id="place_4_rating"></textarea>
-    <div>place 5</div>
-    <textarea id="place_5_rating"></textarea>
-    <div>place 6</div>
-    <textarea id="place_6_rating"></textarea>
-    <div>place 7</div>
-    <textarea id="place_7_rating"></textarea>
-    <div>place 8</div>
-    <textarea id="place_8_rating"></textarea>
-    <div>place 9</div>
-    <textarea id="place_9_rating"></textarea>
-    <div>place 10</div>
-    <textarea id="place_10_rating"></textarea>
-    <button id="city_rating_button">Find Top 5 Destinations</button> -->
+    <div id="random_recs" style="display:none">   
+        <h2>If you have been and liked type 1, if you have been and disliked type -1, if you have not been type 0</h2>
+        <div id=place_1>place 1</div>
+        <textarea id="place_1_rating"></textarea>
+        <div id=place_2>place 2</div>
+        <textarea id="place_2_rating"></textarea>
+        <div id=place_3>place 3</div>
+        <textarea id="place_3_rating"></textarea>
+        <div id=place_4>place 4</div>
+        <textarea id="place_4_rating"></textarea>
+        <div id=place_5>place 5</div>
+        <textarea id="place_5_rating"></textarea>
+        <div id=place_6>place 6</div>
+        <textarea id="place_6_rating"></textarea>
+        <div id=place_7>place 7</div>
+        <textarea id="place_7_rating"></textarea>
+        <div id=place_8>place 8</div>
+        <textarea id="place_8_rating"></textarea>
+        <div id=place_9>place 9</div>
+        <textarea id="place_9_rating"></textarea>
+        <div id=place_10>place 10</div>
+        <textarea id="place_10_rating"></textarea>
+        <button id="city_rating_button">Find Top 5 Destinations</button>
+     </div>
   </body>
 </html>
