--- a/travel_destination_recommendation/webapp/templates/index.html
+++ b/travel_destination_recommendation/webapp/templates/index.html
@@ -137,28 +137,40 @@
     <h1>Rate importance on a scale of 0 to 10</h1>  
     <div>Forest/Mountain</div>
     <div>
-        <img src="images/albi.jpg">
+        <img src="images/forest_mountain.jpg" width="100" height="80">
     </div>
     <div class="slidecontainer">
         <input type="range" min="0" max="10" step="1" value="5" id="forest_slider" class="slider"/>
         <span id="forest_label">5</span>
     </div>
     <div>Palaces/Castles</div>
+    <div>
+        <img src="images/palace_castle.jpg" width="100" height="80">
+    </div>
     <div class="slidecontainer">
       <input type="range" min="0" max="10" value="5" class="slider" id="castle_slider">
       <span id="castle_label">5</span>
     </div>
     <div>Coastal/Water</div>
+    <div>
+        <img src="images/coastal.jpg" width="100" height="80">
+    </div>
     <div class="slidecontainer">
       <input type="range" min="0" max="10" value="5" class="slider" id="water_slider">
       <span id="water_label">5</span>
     </div>
     <div>Historical</div>
+    <div>
+        <img src="images/historical.jpg" width="100" height="80">
+    </div>
     <div class="slidecontainer">
       <input type="range" min="0" max="10" value="5" class="slider" id="historical_slider">
       <span id="historical_label">5</span>
     </div>
     <div>Urban</div>
+    <div>
+        <img src="images/urban.jpg" width="100" height="80">
+    </div>
     <div class="slidecontainer">
       <input type="range" min="0" max="10" value="5" class="slider" id="urban_slider">
       <span id="urban_label">5</span>
